force-app/main/default/objects/Defects_Feedback__c/Defects_Feedback__c.object-meta.xml
<CustomObject>
    <label>Bug Tracker</label>
    <nameField>
        <displayFormat>Bug-{000}</displayFormat>
        <label>Bug Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bug Tracker</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>