force-app/main/default/objects/Defects_Feedback__c/fields/Assigned_to_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_User__c</fullName>
    <label>Assigned to User</label>
    <length>25</length>
    <type>Text</type>
</CustomField>