force-app/main/default/objects/Defects_Feedback__c/fields/Bug_Status__c.field-meta.xml
<CustomField>
    <fullName>Bug_Status__c</fullName>
    <defaultValue>&apos;New&apos;</defaultValue>
    <label>Bug Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Reviewed By Bank</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Reopen</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Blocked/On Hold</fullName>
            </value>
            <value>
                <fullName>Pending on Bank</fullName>
            </value>
            <value>
                <fullName>Not a Bug</fullName>
            </value>
            <value>
                <fullName>Assigned to Dev</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Unable to Replicate</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
                <isActive>false</isActive>
                <label>Invalid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>