force-app/main/default/objects/Defects_Feedback__c/fields/Bug_Type__c.field-meta.xml
<CustomField>
    <fullName>Bug_Type__c</fullName>
    <label>Bug Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>