force-app/main/default/objects/Defects_Feedback__c/fields/Internal_status__c.field-meta.xml
<CustomField>
    <fullName>Internal_status__c</fullName>
    <label>Internal status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev Completed</fullName>
            </value>
            <value>
                <fullName>Ready For QA</fullName>
            </value>
            <value>
                <fullName>QA Passed</fullName>
            </value>
            <value>
                <fullName>QA Fail</fullName>
            </value>
            <value>
                <fullName>Ready for UAT</fullName>
            </value>
            <value>
                <fullName>UAT Pass</fullName>
            </value>
            <value>
                <fullName>UAT Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>