force-app/main/default/objects/Defects_Feedback__c/fields/Issue_description_by_bank__c.field-meta.xml
<CustomField>
    <fullName>Issue_description_by_bank__c</fullName>
    <label>Issue description by bank</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>