force-app/main/default/objects/Defects_Feedback__c/fields/Loan_Applic__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applic__c</fullName>
    <label>Loan Application Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>