force-app/main/default/objects/Defects_Feedback__c/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <label>Modules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RCU</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>DDE</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Acceptance</fullName>
            </value>
            <value>
                <fullName>Disbursement Maker</fullName>
            </value>
            <value>
                <fullName>Disbursament Checker</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
                <isActive>false</isActive>
                <label>Activities</label>
            </value>
            <value>
                <fullName>Credit</fullName>
                <isActive>false</isActive>
                <label>Credit</label>
            </value>
            <value>
                <fullName>Disbursement</fullName>
                <isActive>false</isActive>
                <label>Disbursement</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <isActive>false</isActive>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>