force-app/main/default/objects/Defects_Feedback__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>