force-app/main/default/objects/Defects_Feedback__c/fields/RCA_and_Solution__c.field-meta.xml
<CustomField>
    <fullName>RCA_and_Solution__c</fullName>
    <label>RCA and Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>