force-app/main/default/objects/Defects_Feedback__c/fields/TMC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>TMC_Remarks__c</fullName>
    <label>TMC Remarks</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>