force-app/main/default/objects/Defects_Feedback__c/fields/UAT_Team_Remarks__c.field-meta.xml
<CustomField>
    <fullName>UAT_Team_Remarks__c</fullName>
    <label>UAT Team Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>