force-app/main/default/objects/Defects_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Bug_Status__c</columns>
    <columns>Bug_Type__c</columns>
    <columns>Modules__c</columns>
    <columns>Persona__c</columns>
    <columns>Subject__c</columns>
    <columns>Assigned_to_User__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Feedbacks</label>
</ListView>