force-app/main/default/objects/Defects_Feedback__c/listViews/In_Progress_and_Fixed_Feedbacks.listView-meta.xml
<ListView>
    <fullName>In_Progress_and_Fixed_Feedbacks</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Bug_Status__c</columns>
    <columns>Internal_status__c</columns>
    <columns>Bug_Type__c</columns>
    <columns>Modules__c</columns>
    <columns>Persona__c</columns>
    <columns>Subject__c</columns>
    <columns>Assigned_to_User__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bug_Status__c</field>
        <operation>equals</operation>
        <value>In Progress,Reopen</value>
    </filters>
    <label>Action Items Feedbacks</label>
</ListView>