force-app/main/default/objects/Defects_Feedback__c/listViews/Internal_QA.listView-meta.xml
<ListView>
    <fullName>Internal_QA</fullName>
    <columns>NAME</columns>
    <columns>Bug_Type__c</columns>
    <columns>Modules__c</columns>
    <columns>Subject__c</columns>
    <columns>Severity__c</columns>
    <columns>Assigned_to_User__c</columns>
    <columns>Bug_Status__c</columns>
    <columns>Internal_status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Issue_description_by_bank__c</columns>
    <columns>TMC_Remarks__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bug_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Internal QA View</label>
    <sharedTo>
        <group>Admin_Users</group>
    </sharedTo>
</ListView>