force-app/main/default/objects/Defects_Feedback__c/listViews/Open_Feedbacks.listView-meta.xml
<ListView>
    <fullName>Open_Feedbacks</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Bug_Status__c</columns>
    <columns>Bug_Type__c</columns>
    <columns>Modules__c</columns>
    <columns>Subject__c</columns>
    <columns>Assigned_to_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bug_Status__c</field>
        <operation>equals</operation>
        <value>New,Reviewed By Bank,Need More Information,In Progress,Fixed,Reopen,Blocked/On Hold,Pending on Bank,Assigned to Dev</value>
    </filters>
    <label>Open Feedbacks</label>
</ListView>