force-app/main/default/objects/Defects_Feedback__c/listViews/Tech_Team_View.listView-meta.xml
<ListView>
    <fullName>Tech_Team_View</fullName>
    <columns>NAME</columns>
    <columns>Bug_Type__c</columns>
    <columns>Modules__c</columns>
    <columns>Bug_Status__c</columns>
    <columns>Internal_status__c</columns>
    <columns>Assigned_to_User__c</columns>
    <columns>Subject__c</columns>
    <columns>Severity__c</columns>
    <columns>RCA_and_Solution__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bug_Status__c</field>
        <operation>equals</operation>
        <value>Assigned to Dev</value>
    </filters>
    <filters>
        <field>Internal_status__c</field>
        <operation>notEqual</operation>
        <value>QA Passed</value>
    </filters>
    <label>Tech Team View</label>
    <sharedTo>
        <group>Admin_Users</group>
    </sharedTo>
</ListView>